--- a/config/globalgamerules.cfg
+++ b/config/globalgamerules.cfg
@@ -3,35 +3,35 @@
 ##########################################################################################################
 # 游戏规则
 #--------------------------------------------------------------------------------------------------------#
-# 根据您是否希望启用/禁用GameRule或设置不同的默认值,将值设置为('true'/'false'/整数或字符串默认值)
+# 根据你是否想启用该游戏规则(启用/禁用)或设置不同的默认值,将值设置为('true'/'false'/整数或字符串默认值)。
 ##########################################################################################################
 
 gamerules {
-    # 其他mod或命令添加的GameRule
+    # 其他mod或命令添加的游戏规则
     S:GGRExample=false
 
-    # 其他mod或命令添加的GameRule
+    # 其他mod或命令添加的游戏规则
     S:ScalingHealthDifficulty=true
 
     # 当玩家获得进度时是否应该发出公告
     S:announceAdvancements=true
 
-    # 命令方块是否应在执行命令时通知管理员
+    # 命令方块执行命令时是否应该通知管理员
     S:commandBlockOutput=false
 
-    # 当玩家穿着鞘翅时,服务器是否应跳过检查玩家速度
+    # 玩家穿戴鞘翅时,服务器是否应跳过检查玩家速度
     S:disableElytraMovementCheck=false
 
-    # 是否应该进行昼夜循环和月相变化
+    # 是否应该有昼夜循环和月相变化
     S:doDaylightCycle=true
 
-    # 非生物实体是否应该掉落物品
+    # 非生物实体是否应该有掉落物
     S:doEntityDrops=true
 
     # 火焰是否应该传播和自然熄灭
     S:doFireTick=true
 
-    # 玩家是否只能制作已解锁的配方
+    # 玩家是否只能合成已解锁的配方
     S:doLimitedCrafting=false
 
     # 生物是否应该掉落物品
@@ -40,10 +40,10 @@ gamerules {
     # 生物是否应该自然生成
     S:doMobSpawning=true
 
-    # 方块是否应该掉落物品
+    # 方块是否应该有掉落物
     S:doTileDrops=true
 
-    # 天气是否会改变
+    # 天气是否会变化
     S:doWeatherCycle=true
 
     # 每个游戏刻运行的函数
@@ -55,41 +55,43 @@ gamerules {
     # 是否将管理员命令记录到服务器日志
     S:logAdminCommands=true
 
-    # 决定链命令方块作为"链"的数量
+    # 决定链命令方块作为"链"的数量。
     S:maxCommandChainLength=65536
 
-    # 一个生物或玩家最多可以推动其他可推动实体的数量,在每半秒受到3点窒息伤害。设置为0可禁用此规则。伤害会影响生存模式或冒险模式玩家,以及除蝙蝠外的所有生物。
+    # 一个生物或玩家在受到3点窒息伤害之前可以推动的其他可推动实体的最大数量。
+    # 设置为0将禁用此规则。伤害会影响生存模式或冒险模式玩家,以及所有生物(蝙蝠除外)。
     # 可推动实体包括非旁观者模式玩家、除蝙蝠外的任何生物,以及船只和矿车。
     S:maxEntityCramming=24
 
-    # 爬行者、僵尸、末影人、恶魂、凋零、末影龙、兔子、羊和村民是否应该能够改变方块,以及村民、僵尸、骷髅和僵尸猪人是否能拾取物品
+    # 爬行者、僵尸、enderman、恶魂、凋零、末影龙、兔子、羊和村民是否应该能够改变方块,
+    # 以及村民、僵尸、骷髅和僵尸猪人是否能拾取物品
     S:mobGriefing=true
 
-    # 当饥饿值足够高时,玩家是否可以自然恢复生命值(不影响外部治疗,如金苹果、regeneration效果等)
+    # 玩家的饥饿值足够高时,是否可以自然恢复生命值(不影响外部治疗,如金苹果、生命恢复效果等)
     S:naturalRegeneration=false
 
-    # 其他mod或命令添加的GameRule
+    # 其他mod或命令添加的游戏规则
     S:quark_allowDropoff=false
 
-    # 每个区块每个游戏刻发生的随机方块更新频率(如植物生长、树叶枯萎等)。0将禁用随机更新,更高的数字将增加随机更新
+    # 每个区块每个游戏刻发生的随机方块刻(如植物生长、叶子腐烂等)的频率。0将禁用随机刻,更高的数字将增加随机刻
     S:randomTickSpeed=3
 
-    # 调试屏幕是显示所有信息还是仅显示部分信息;以及F3+B(实体碰撞箱)和F3+G(区块边界)的效果是否显示
+    # 调试屏幕是否显示所有或减少的信息;以及F3+B(实体碰撞箱)和F3+G(区块边界)的效果是否显示。
     S:reducedDebugInfo=true
 
-    # 玩家执行的命令反馈是否应该出现在聊天中。也影响命令方块是否存储其输出文本的默认行为
+    # 玩家执行的命令反馈是否应该出现在聊天中。也会影响命令方块是否存储其输出文本的默认行为
     S:sendCommandFeedback=true
 
-    # 当玩家死亡时是否显示消息
+    # 玩家死亡时是否在聊天中显示消息
     S:showDeathMessages=true
 
-    # 玩家首次加入服务器或在没有出生点的情况下死亡时,出生点坐标周围的方块范围
-    S:spawnRadius=20000
+    # 玩家第一次加入服务器或在没有重生点的情况下死亡时,从世界重生点坐标开始的方块范围内重生。
+    S:spawnRadius=6000
 
     # 旁观者模式下的玩家是否可以生成区块
     S:spectatorsGenerateChunks=true
 
-    # 其他mod或命令添加的GameRule
+    # 其他mod或命令添加的游戏规则
     S:tfEnforcedProgression=true
 }
 
@@ -101,8 +103,8 @@ gamerules {
 ##########################################################################################################
 
 misc {
-    # 语法为: name-enabled-command
-    # enabled 为 true 或 false, 所有 @p 将被替换为玩家名称
+    # 语法为:名称-启用-命令
+    # 启用为true或false,所有@p都将被替换为玩家名称
     S:customGamerules <
         GGRExample-false-/tell @p 你好世界
      >
@@ -110,7 +112,7 @@ misc {
     # 是否在卸载世界时将游戏规则和世界难度保存到配置文件
     S:saveGameRules=true
 
-    # 在加载时设置世界的难度,如果世界的难度被锁定,则会遵循该设置
+    # 设置加载世界时的难度,会尊重世界是否已锁定难度
     # -1: 禁用
     # 0: 和平
     # 1: 简单
@@ -118,7 +120,7 @@ misc {
     # 3: 困难
     S:worldDifficulty=3
 
-    # 在加载时是否应该锁定世界的难度,如果世界已经被锁定,则无法更改
-    # 如果启用了全局世界难度,则首先设置该值
+    # 加载世界时是否应该锁定难度,如果世界已经锁定则无法更改
+    # 如果启用了全局世界难度,则首先设置它
     S:worldDifficultyLocked=false
 }
