--- a/config/rlmixins/dsurround_chat.cfg
+++ b/config/rlmixins/dsurround_chat.cfg
@@ -13,7 +13,6 @@
 #            selection language translation does not occur until it get's client side.
 #
 
-
 chat.creeper.0=10,别管我!
 chat.creeper.1=10,我只是想要一个拥抱!
 chat.creeper.2=10,让我们成为亲密的朋友吧!
@@ -176,7 +175,8 @@ chat.stray.29=5,咖啡对我来说就是直接穿过...
 chat.stray.30=10,你以为你能逃到哪里去?
 chat.stray.31=5,我唯一的遗憾就是我得了骨质疏松...
 chat.stray.32=5,欢迎来到骨头区!
-chat.stray.33=10,我是个彻头彻尾的骨头坏蛋!
+chat.stray.33=5,我是个彻头彻尾的骨头坏蛋!
+chat.stray.34=10,我骨子里坏透了！
 
 
 chat.villager_golem.0=10,保持门。
@@ -326,7 +326,6 @@ chat.villager.137=15,是的,我们有免费医疗。那就是复活按钮!
 chat.villager.138=5,...记住!龙都是混蛋!
 chat.villager.139=15,你看到了吗?
 chat.villager.140=10,所以,这意味着RLCraft和Smash在同一个宇宙里吗?
-
 chat.villager.141=15,你经常去云顶区吗?
 chat.villager.142=15,等等,我认识你!
 chat.villager.143=15,让我猜猜。有人偷走了你的甜面包卷?
@@ -367,8 +366,15 @@ chat.villager.176=10,花丛平原那边的人可真热情。
 chat.villager.177=10,有传言说在主世界的虚空之外有一个全新而又致命的世界。
 chat.villager.178=10,哦Kotlin,要是你卖给我的那个提示有用就好了...
 chat.villager.179=10,该死,别再听社区的Kotlin了,听听我们的,把龙删掉而不是加进来!
+chat.villager.180=10，我保证不是 Sussyberian！
+chat.villager.181=10，如需技术支持，请致电 Fonnyyy！
+chat.villager.182=10，等等，传说有语法问题吗？！但我听到 shiv 说他解决了这一切!!
+chat.villager.183=10，空指针？一定是老鹰！
+chat.villager.184=10，作者：Fonny's Beard！
+chat.villager.185=10，作者：Shiv 的秃胡子！
 
-chat.villager.flee.0=20,逃跑!逃跑!
+
+chat.villager.flee.0=20，快跑吧！ 跑掉！
 chat.villager.flee.1=20,!!!救命!!!
 chat.villager.flee.2=5,我要我的父母单位!
 chat.villager.flee.3=15,村民先生!我们需要你!
@@ -476,7 +482,6 @@ chat.witch.7=10,我想我现在会把它藏在帽子里。
 chat.witch.8=15,我会抓到你的,我的小宝贝!还有你的小狗,也!你有狗吗?
 chat.witch.9=10,别问我把所有这些药水藏在哪里。你把所有那些泥土放在哪里?
 chat.witch.10=10,我真希望我有一只飞行猴子。
-
 chat.witch.11=15,你有没有试过把一块石头当成宠物?那在过去可是一种时尚。
 chat.witch.12=15,这不是疣!这是美人痣!
 chat.witch.13=10,有时我觉得我的鼻子好像有了自己的生命。
