--- a/config/setbonus/1.12.2.009+.cfg
+++ b/config/setbonus/1.12.2.009+.cfg
@@ -257,9 +257,7 @@ general {
             SGSet, 魔法灌注, head = SGHelm, chest = SGChest, legs = SGLegs, feet = SGBoots
             GSetW, 魔法灌注武器, mainhand = GSword | GSW1 | GSW2 | GSW3 | GSW4 | GSW5 | GSW6 | GSW7 | GSW8 | GSW9 | GSW10 | GSW11 | GSW12 | GSW13 | GSW14 | GSW15 | GSW16 | GSW17 | GSW18 | GSW19 | GSW20 | BGW1 | BGW2 | BGW3 | BGW4 | BGW5
             GSetT, 魔法灌注工具, mainhand = GTool1 | GTool2 | GTool3 | GTool4
-            SSet, 水银, head = SHelm, chest = SChest, legs = SLegs, feet = SBoots
-            SDSet, 银病, head = SHelm, chest = SChest, legs = SLegs, feet = SBoots
-            SBSet, 安卡护符/盾牌, offhand | bauble_amulet | bauble_ring | bauble_belt | bauble_head | bauble_body | bauble_charm | bauble_trinket = AnkhCharm | AnkhCharmShield, head = SHelm, chest = SChest, legs = SLegs, feet = SBoots
+            SSet, 水银, head = SHelm, chest = SChest, legs = SLegs, feet = SBoot
             SSetW, 水银手, mainhand = SSword | SSW1 | SSW2 | SSW3 | SSW4 | SSW5 | SSW6 | SSW7 | SSW8 | SSW9 | SSW10 | SSW11 | SSW12 | SSW13 | SSW14 | SSW15 | SSW16 | SSW17 | SSW18 | SSW19 | SSW20 | BSW1 | BSW2 | BSW3 | BSW4 | BSW5
             USet, PPE, head = UHelm, chest = UChest, legs = ULegs, feet = UBoots
             GolemSet, 岩石, head = GolemHelm, chest = GolemChest, legs = GolemLegs, feet = GolemBoots
@@ -326,8 +324,6 @@ general {
             SGBonusWeapon, +100% 伤害, 0, SGSet, GSetW
             SGBonusTool, +40% 挖掘速度, 0, SGSet, GSetT
             SBonus, +50% 移动速度, 0, SSet
-            SBonus2, 免疫, 0, SSet
-            SBonus4, 每1-3分钟,如果药水中毒时间过长,有15%的几率药水中毒效果会加剧, 0, SDSet
             SBonus5, 安卡护符/盾牌可抵消银病, 0, SDSet
             SBonusW, +50% 攻击速度, 0, SSet, SSetW
             CPSet, 雷电抗性, 1, CopperSet
@@ -401,7 +397,6 @@ general {
             SGBonusWeapon, generic.attackDamage=1 @ 1
             SBonus, generic.movementSpeed=0.5 @ 1
             SBonusW, generic.attackSpeed=0.5 @ 1
-            SBauble, generic.maxHealth =-0.25 @ 2
             MyrmexBonus, potioncore.stepHeight=1.0 @ 0
             DeathWormBonus, potioncore.digSpeed=0.5 @ 1
             NRSetBonus, potioncore.digSpeed=0.4 @ 1
@@ -417,11 +412,11 @@ general {
             FamineDebuff7, generic.attackDamage =0.025 @ 2
             FamineDebuff8, generic.attackDamage =0.025 @ 2
             SwineDebuff, potioncore.digSpeed=0.25 @ 1
-            CPSet, generic.movementSpeed=-0.5 @ 1
             BanHammerAttribute, generic.armor=-1.0 @ 2
             BanHammerAttribute, generic.movementSpeed=-0.25 @ 2
             BanHammerAttribute, generic.attackSpeed=-0.5 @ 2
             BanHammerAttribute, generic.maxHealth=-0.5 @ 2
+            CopperSet, generic.movementSpeed=-0.1 @ 2
          >
 
         # FILLSCREEN Constant potion effects received as part of a bonus
@@ -477,7 +472,6 @@ general {
             CSetBonus2, minecraft:glowing.0.205
             CSetBonus3, minecraft:luck.0.205
             CSetBonus4, potioncore:solid_core.0.205
-            CSBonus, lycanitesmobs:immunization.0.205
             SwineDebuff, hunger.2.205
             FamineDebuff1x, hunger.10.105, mod_lavacow:corroded.0.105, mod_lavacow:fragile.0.105, potioncore:vulnerable.0.105, srparasites:rage.0.105
             FamineDebuff2x, minecraft:hunger.10.105, mod_lavacow:corroded.0.105, mod_lavacow:fragile.0.105, potioncore:vulnerable.0.105, srparasites:rage.0.105
@@ -486,7 +480,7 @@ general {
             BanHammerDispel, potioncore:dispel.0.205
             BanHammerSickness, potioncore:potion_sickness.0.205
             BanHammerWarp, mujmajnkraftsbettersurvival:antiwarp.0.205
-            CPSet, xat:lightning_resistance.0.105, potioncore:weight.0.105
+            CopperSet, xat:lightning_resistance.0.205
          >
     }
 
